--- a/src/pages/admin/Studies/Study.css
+++ b/src/pages/admin/Studies/Study.css
@@ -8,10 +8,10 @@
 }
 
 .toggleContainer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: auto;
 }
 
 .country-heading {
@@ -135,4 +135,13 @@
 
 .allStudies-grid .css-1w6wuh5 {
   float: right !important;
+}
+
+.study_header {
+  display: flex !important;
+  align-items: baseline !important;
+  gap: 10px !important;
+  margin-top: 12px !important;
+  margin-right: -10px !important;
+  margin-left: -7px !important;
 }
